<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <TextView
            style="@style/book_activity_header"
            android:text="@string/book_activity_title"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/header"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            />

        <TextView
            style="@style/book_activity_instruction_text"
            android:text="@string/book_activity_instructions"
            />

        <EditText
            android:id="@+id/book_title_search"
            android:tag="edit_text_tag"
            style="@style/book_activity_edit_text"
            android:hint="@string/book_activity_edit_title_hint"
            />

        <EditText
            android:id="@+id/book_author_search"
            android:tag="edit_text_tag"
            style="@style/book_activity_edit_text"
            android:hint="@string/book_activity_edit_author_hint"
            />

        <Button
            android:id="@+id/book_search_button"
            style="@style/book_activity_search_button"
            android:text="@string/book_activity_search_button_text"
            />
    </LinearLayout>
</ScrollView>