<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.booklistingappudacity.BookDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/detailed_book_thumbnail"
                style="@style/detailed_thumbnail"
                tools:src="@drawable/no_preview"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/detailed_book_title"
                    android:tag="TextView"
                    style="@style/detailed_title"
                    tools:text="@string/placeholder_book_title"
                    />

                <TextView
                    android:id="@+id/detailed_book_author"
                    android:tag="TextView"
                    style="@style/detailed_author"
                    tools:text="@string/placeholder_book_author"
                    />

                <TextView
                    android:id="@+id/detailed_book_release_date"
                    android:tag="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/placeholder_book_release_date"
                    />

                <TextView
                    android:id="@+id/detailed_book_publisher"
                    android:tag="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/detailed_book_release_category"
                    android:tag="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/placeholder_book_category"
                    />

                <TextView
                    android:id="@+id/detailed_book_print_type"
                    android:tag="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/placeholder_book_print_type"/>

                <TextView
                    android:id="@+id/detailed_book_rating"
                    android:tag="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:id="@+id/detailed_book_price"
                    android:tag="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/placeholder_book_price"
                    />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            />

        <TextView
            android:id="@+id/detailed_book_description"
            android:tag="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/detailed_book_page_count"
                android:tag="TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_book_epub_text" />

                <ImageView
                    android:id="@+id/epub_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_book_pdf_text"/>
                <ImageView
                    android:id="@+id/pdf_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/preview_button"
                android:tag="Button"
                style="@style/detailed_buttons"
                android:text="Preview"/>

            <Button
                android:id="@+id/buy_button"
                android:tag="Button"
                style="@style/detailed_buttons"
                android:text="Buy"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
