<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="88dp"
    android:padding="6dp">

    <ImageView
        android:id="@+id/book_thumbnail"
        style="@style/book_list_thumbnail"
        tools:src="@drawable/ic_check_box_black_24dp"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingLeft="6dp">

        <TextView
            android:id="@+id/book_title"
            style="@style/book_list_title"
            android:maxLines="2"
            tools:text="@string/placeholder_book_title"
            tools:ignore="NestedWeights,Suspicious0dp"
            />

        <TextView
            android:id="@+id/book_author"
            style="@style/book_list_author"
            tools:text="@string/placeholder_book_author"
            tools:ignore="NestedWeights,Suspicious0dp"
            android:maxLines="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5">

        <ImageView
            android:id="@+id/book_rating"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:src="@drawable/rating_five"
            android:background="#eee"
            tools:ignore="NestedWeights"
            android:adjustViewBounds="true"
            />

        <TextView
            android:id="@+id/book_price"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:background="#ddd"
            tools:text="@string/placeholder_book_price"
            />

    </LinearLayout>

</LinearLayout>